@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-18T01:03:22Z",
+  "timestamp" : "2023-09-18T08:18:59Z",
   "count_outdated" : 1582,
   "uniques_outdated" : 362,
-  "count" : 1751,
-  "uniques" : 384,
+  "count" : 1759,
+  "uniques" : 385,
   "views" : [
     {
       "timestamp": "2023-09-05T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
