@@ -1,3 +1,12 @@
+2023-09-18T08:18:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6219944777 # 1906
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-18
+* notice: last 14d: unq all: 20 177
+* notice: prev accum: outdated-unq outdated-all / unq all: 362 1582 / 384 1751
+* notice: next accum: outdated-unq outdated-all / unq all: 362 1582 / 385 1759
+* notice: prev exec diff / last date diff / accum: unq all: +1 +8 -0 -0 / +1 +8 -0 -0 / 1 8
+* notice: removed / changed dates: [] / [2023-09-18]
+
 2023-09-18T01:03:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6216976332 # 1905
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-18
